--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -20,7 +20,7 @@
             />
           </div>
           
-          <button type="submit" class="btn btn-primary col-md-2 btn-todo btn-block drop-shadow">
+          <buton type="submit" class="btn btn-primary col-md-2 btn-todo btn-block drop-shadow">
             Add
           </button>
   
